--- a/index.html
+++ b/index.html
@@ -23,27 +23,28 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你</span><br>
-                      <span class="say"> 我知道我不会甜言蜜语，</span><br>
-                      <span class="say"> 但是我会用行动证明一切</span><br>
-                      <span class="say">你说我啰嗦，</span><br>             
-                          <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>
-                      <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
-                      <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
-                      <span class="say">希望可以执子之手，与子偕老</span><br>
-                      <span class="say">如果上天让我许三个愿望，</span><br>
-                              <span class="say">第一个是今生今世和你在一起， </span><br>
-                           <span class="say"> 第二个是再生再世和你在一起，</span><br>
-                           <span class="say">第三个是永生永世和你不分离 </span><br>
-                      <span class="say"><span class="space"></span> -- 爱你的老公</span> </font>
+                    <div id="code"> <font color="#f1404b"> 
+                      <span class="say">亲爱的子晗 </span><br>
+                      <span class="say"> 我原想去看星辰大海，</span><br>
+                      <span class="say"> 去游历世间百景，</span><br>
+                      <span class="say"> 去体味浮生千种，</span><br>
+                      <span class="say"> 却不小心在遥遥路途中与你相遇， </span><br>             
+                      <span class="say"> 现在能让我努力奔跑的， </span><br>
+                      <span class="say"> 除了倾盆大雨还有可爱温柔的你。 </span><br>
+                      <span class="say"> 我有千万里的山光想与你说， </span><br>
+                      <span class="say"> 我有千万里的水色想与你讲， </span><br>
+                      <span class="say"> 沿途的星辰也想摘取下来给你， </span><br>
+                      <span class="say"> 我见众生皆草木， </span><br>
+                      <span class="say"> 唯你是青山。 </span><br>
+                      <span class="say"><span class="space"></span> -- 爱你的楠</span> </font>
                           <br />
                           <br />
                       </p>
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的，我喜欢你</font>
-<span class="STYLE1">已经是……</span>
+                    <span class="STYLE1"></span><font color="#f1404b">子晗，我喜欢你</font>
+                    <span class="STYLE1">已经是……</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -165,7 +166,7 @@
 
             // 会有闪烁不得意这样做, (＞﹏＜)
             canvas.parent().css("background", "url(" + tree.toDataURL('image/png') + ")");
-            canvas.css("background", "#ffe");
+            canvas.css("background", "#fec9c9");
             $await(Jscex.Async.sleep(300));
             canvas.css("background", "none");
         }));
@@ -182,11 +183,11 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2010,1 , 15); 			//时间年月日
-		    together.setHours(16);						//小时	
-		    together.setMinutes(53);					//分钟
+		    together.setFullYear(2020,9 , 16); 			//时间年月日
+		    together.setHours(10);						//小时	
+		    together.setMinutes(21);					//分钟
 		    together.setSeconds(0);					//秒前一位
-		    together.setMilliseconds(2);				//秒第二位
+		    together.setMilliseconds(0);				//秒第二位
 
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
